# serializer version: 1
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 5.0 ┆ 5.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ 6.0 │
  │ 2   ┆ 5.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 2.0 ┆ 2.0 │
  │ 3   ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 2.0 ┆ 2.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 2.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 3.0 │
  │ 6   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 4.0 │
  │ 7   ┆ 6.0 ┆ 4.0 ┆ 2.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 2.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 4.0 │
  │ 10  ┆ 6.0 ┆ 2.0 ┆ 6.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 4.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-event-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.2123 ┆ 8.8154 ┆ … ┆ 7.0117 ┆ 8.0431 ┆ 5.3859 ┆ 4.0821 │
  │ 2   ┆ 5.2123 ┆ 0.0    ┆ 5.308  ┆ … ┆ 6.9912 ┆ 5.3217 ┆ 4.6399 ┆ 3.7344 │
  │ 3   ┆ 8.8154 ┆ 5.308  ┆ 0.0    ┆ … ┆ 3.4433 ┆ 2.182  ┆ 3.2141 ┆ 7.1034 │
  │ 4   ┆ 8.2808 ┆ 5.4354 ┆ 0.6622 ┆ … ┆ 3.0628 ┆ 0.8214 ┆ 2.193  ┆ 6.5651 │
  │ 5   ┆ 4.827  ┆ 3.4614 ┆ 4.1502 ┆ … ┆ 3.1713 ┆ 4.7741 ┆ 4.2711 ┆ 3.6742 │
  │ 6   ┆ 6.6741 ┆ 6.8873 ┆ 4.6237 ┆ … ┆ 1.6382 ┆ 3.0931 ┆ 2.6568 ┆ 5.1091 │
  │ 7   ┆ 7.0117 ┆ 6.9912 ┆ 3.4433 ┆ … ┆ 0.0    ┆ 2.9367 ┆ 2.5343 ┆ 6.7233 │
  │ 8   ┆ 8.0431 ┆ 5.3217 ┆ 2.182  ┆ … ┆ 2.9367 ┆ 0.0    ┆ 2.2056 ┆ 7.7085 │
  │ 9   ┆ 5.3859 ┆ 4.6399 ┆ 3.2141 ┆ … ┆ 2.5343 ┆ 2.2056 ┆ 0.0    ┆ 5.0997 │
  │ 10  ┆ 4.0821 ┆ 3.7344 ┆ 7.1034 ┆ … ┆ 6.7233 ┆ 7.7085 ┆ 5.0997 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 5.0 ┆ 5.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ 6.0 │
  │ 2   ┆ 5.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 2.0 ┆ 2.0 │
  │ 3   ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 2.0 ┆ 2.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 2.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 3.0 │
  │ 6   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 4.0 │
  │ 7   ┆ 6.0 ┆ 4.0 ┆ 2.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 2.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 4.0 │
  │ 10  ┆ 6.0 ┆ 2.0 ┆ 6.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 4.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-interval-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.2123 ┆ 8.8154 ┆ … ┆ 7.0117 ┆ 8.0431 ┆ 5.3859 ┆ 4.0821 │
  │ 2   ┆ 5.2123 ┆ 0.0    ┆ 5.308  ┆ … ┆ 6.9912 ┆ 5.3217 ┆ 4.6399 ┆ 3.7344 │
  │ 3   ┆ 8.8154 ┆ 5.308  ┆ 0.0    ┆ … ┆ 3.4433 ┆ 2.182  ┆ 3.2141 ┆ 7.1034 │
  │ 4   ┆ 8.2808 ┆ 5.4354 ┆ 0.6622 ┆ … ┆ 3.0628 ┆ 0.8214 ┆ 2.193  ┆ 6.5651 │
  │ 5   ┆ 4.827  ┆ 3.4614 ┆ 4.1502 ┆ … ┆ 3.1713 ┆ 4.7741 ┆ 4.2711 ┆ 3.6742 │
  │ 6   ┆ 6.6741 ┆ 6.8873 ┆ 4.6237 ┆ … ┆ 1.6382 ┆ 3.0931 ┆ 2.6568 ┆ 5.1091 │
  │ 7   ┆ 7.0117 ┆ 6.9912 ┆ 3.4433 ┆ … ┆ 0.0    ┆ 2.9367 ┆ 2.5343 ┆ 6.7233 │
  │ 8   ┆ 8.0431 ┆ 5.3217 ┆ 2.182  ┆ … ┆ 2.9367 ┆ 0.0    ┆ 2.2056 ┆ 7.7085 │
  │ 9   ┆ 5.3859 ┆ 4.6399 ┆ 3.2141 ┆ … ┆ 2.5343 ┆ 2.2056 ┆ 0.0    ┆ 5.0997 │
  │ 10  ┆ 4.0821 ┆ 3.7344 ┆ 7.1034 ┆ … ┆ 6.7233 ┆ 7.7085 ┆ 5.0997 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 5.0 ┆ 5.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 4.0 ┆ 6.0 │
  │ 2   ┆ 5.0 ┆ 0.0 ┆ 5.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 2.0 ┆ 2.0 │
  │ 3   ┆ 5.0 ┆ 5.0 ┆ 0.0 ┆ … ┆ 2.0 ┆ 2.0 ┆ 5.0 ┆ 6.0 │
  │ 4   ┆ 3.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 7.0 │
  │ 5   ┆ 6.0 ┆ 2.0 ┆ 4.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 3.0 ┆ 3.0 │
  │ 6   ┆ 5.0 ┆ 4.0 ┆ 3.0 ┆ … ┆ 2.0 ┆ 1.0 ┆ 3.0 ┆ 4.0 │
  │ 7   ┆ 6.0 ┆ 4.0 ┆ 2.0 ┆ … ┆ 0.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 8   ┆ 5.0 ┆ 5.0 ┆ 2.0 ┆ … ┆ 2.0 ┆ 0.0 ┆ 4.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 0.0 ┆ 4.0 │
  │ 10  ┆ 6.0 ┆ 2.0 ┆ 6.0 ┆ … ┆ 4.0 ┆ 5.0 ┆ 4.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[datetime-state-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 5.2123 ┆ 8.8154 ┆ … ┆ 7.0117 ┆ 8.0431 ┆ 5.3859 ┆ 4.0821 │
  │ 2   ┆ 5.2123 ┆ 0.0    ┆ 5.308  ┆ … ┆ 6.9912 ┆ 5.3217 ┆ 4.6399 ┆ 3.7344 │
  │ 3   ┆ 8.8154 ┆ 5.308  ┆ 0.0    ┆ … ┆ 3.4433 ┆ 2.182  ┆ 3.2141 ┆ 7.1034 │
  │ 4   ┆ 8.2808 ┆ 5.4354 ┆ 0.6622 ┆ … ┆ 3.0628 ┆ 0.8214 ┆ 2.193  ┆ 6.5651 │
  │ 5   ┆ 4.827  ┆ 3.4614 ┆ 4.1502 ┆ … ┆ 3.1713 ┆ 4.7741 ┆ 4.2711 ┆ 3.6742 │
  │ 6   ┆ 6.6741 ┆ 6.8873 ┆ 4.6237 ┆ … ┆ 1.6382 ┆ 3.0931 ┆ 2.6568 ┆ 5.1091 │
  │ 7   ┆ 7.0117 ┆ 6.9912 ┆ 3.4433 ┆ … ┆ 0.0    ┆ 2.9367 ┆ 2.5343 ┆ 6.7233 │
  │ 8   ┆ 8.0431 ┆ 5.3217 ┆ 2.182  ┆ … ┆ 2.9367 ┆ 0.0    ┆ 2.2056 ┆ 7.7085 │
  │ 9   ┆ 5.3859 ┆ 4.6399 ┆ 3.2141 ┆ … ┆ 2.5343 ┆ 2.2056 ┆ 0.0    ┆ 5.0997 │
  │ 10  ┆ 4.0821 ┆ 3.7344 ┆ 7.1034 ┆ … ┆ 6.7233 ┆ 7.7085 ┆ 5.0997 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 6.0 ┆ 4.0 ┆ 4.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 2.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 4.0 ┆ 5.0 ┆ 3.0 │
  │ 4   ┆ 6.0 ┆ 3.0 ┆ 2.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 5   ┆ 4.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 4.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 6.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-event-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 3.3379 ┆ 5.4673 ┆ … ┆ 5.7222 ┆ 4.6029 ┆ 5.6433 ┆ 3.3426 │
  │ 2   ┆ 3.3379 ┆ 0.0    ┆ 7.7296 ┆ … ┆ 6.5663 ┆ 2.8926 ┆ 2.7894 ┆ 0.8849 │
  │ 3   ┆ 5.4673 ┆ 7.7296 ┆ 0.0    ┆ … ┆ 0.9684 ┆ 5.8233 ┆ 4.7828 ┆ 9.3586 │
  │ 4   ┆ 5.095  ┆ 6.1307 ┆ 0.1881 ┆ … ┆ 0.8605 ┆ 4.2351 ┆ 4.4338 ┆ 5.9605 │
  │ 5   ┆ 4.4403 ┆ 3.2314 ┆ 6.7407 ┆ … ┆ 4.6308 ┆ 3.3127 ┆ 3.3844 ┆ 3.409  │
  │ 6   ┆ 8.3159 ┆ 2.5356 ┆ 7.858  ┆ … ┆ 4.2593 ┆ 2.625  ┆ 2.9574 ┆ 2.2467 │
  │ 7   ┆ 5.7222 ┆ 6.5663 ┆ 0.9684 ┆ … ┆ 0.0    ┆ 3.6277 ┆ 3.3777 ┆ 6.7245 │
  │ 8   ┆ 4.6029 ┆ 2.8926 ┆ 5.8233 ┆ … ┆ 3.6277 ┆ 0.0    ┆ 3.1838 ┆ 2.5596 │
  │ 9   ┆ 5.6433 ┆ 2.7894 ┆ 4.7828 ┆ … ┆ 3.3777 ┆ 3.1838 ┆ 0.0    ┆ 2.6234 │
  │ 10  ┆ 3.3426 ┆ 0.8849 ┆ 9.3586 ┆ … ┆ 6.7245 ┆ 2.5596 ┆ 2.6234 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 6.0 ┆ 4.0 ┆ 4.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 2.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 4.0 ┆ 5.0 ┆ 3.0 │
  │ 4   ┆ 6.0 ┆ 3.0 ┆ 2.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 5   ┆ 4.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 4.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 6.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-interval-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 3.3379 ┆ 5.4673 ┆ … ┆ 5.7222 ┆ 4.6029 ┆ 5.6433 ┆ 3.3426 │
  │ 2   ┆ 3.3379 ┆ 0.0    ┆ 7.7296 ┆ … ┆ 6.5663 ┆ 2.8926 ┆ 2.7894 ┆ 0.8849 │
  │ 3   ┆ 5.4673 ┆ 7.7296 ┆ 0.0    ┆ … ┆ 0.9684 ┆ 5.8233 ┆ 4.7828 ┆ 9.3586 │
  │ 4   ┆ 5.095  ┆ 6.1307 ┆ 0.1881 ┆ … ┆ 0.8605 ┆ 4.2351 ┆ 4.4338 ┆ 5.9605 │
  │ 5   ┆ 4.4403 ┆ 3.2314 ┆ 6.7407 ┆ … ┆ 4.6308 ┆ 3.3127 ┆ 3.3844 ┆ 3.409  │
  │ 6   ┆ 8.3159 ┆ 2.5356 ┆ 7.858  ┆ … ┆ 4.2593 ┆ 2.625  ┆ 2.9574 ┆ 2.2467 │
  │ 7   ┆ 5.7222 ┆ 6.5663 ┆ 0.9684 ┆ … ┆ 0.0    ┆ 3.6277 ┆ 3.3777 ┆ 6.7245 │
  │ 8   ┆ 4.6029 ┆ 2.8926 ┆ 5.8233 ┆ … ┆ 3.6277 ┆ 0.0    ┆ 3.1838 ┆ 2.5596 │
  │ 9   ┆ 5.6433 ┆ 2.7894 ┆ 4.7828 ┆ … ┆ 3.3777 ┆ 3.1838 ┆ 0.0    ┆ 2.6234 │
  │ 10  ┆ 3.3426 ┆ 0.8849 ┆ 9.3586 ┆ … ┆ 6.7245 ┆ 2.5596 ┆ 2.6234 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-hamming]
  shape: (10, 11)
  ┌─────┬─────┬─────┬─────┬───┬─────┬─────┬─────┬─────┐
  │ id  ┆ 1   ┆ 2   ┆ 3   ┆ … ┆ 7   ┆ 8   ┆ 9   ┆ 10  │
  │ --- ┆ --- ┆ --- ┆ --- ┆   ┆ --- ┆ --- ┆ --- ┆ --- │
  │ i64 ┆ f32 ┆ f32 ┆ f32 ┆   ┆ f32 ┆ f32 ┆ f32 ┆ f32 │
  ╞═════╪═════╪═════╪═════╪═══╪═════╪═════╪═════╪═════╡
  │ 1   ┆ 0.0 ┆ 6.0 ┆ 6.0 ┆ … ┆ 7.0 ┆ 6.0 ┆ 4.0 ┆ 4.0 │
  │ 2   ┆ 6.0 ┆ 0.0 ┆ 4.0 ┆ … ┆ 3.0 ┆ 4.0 ┆ 2.0 ┆ 5.0 │
  │ 3   ┆ 6.0 ┆ 4.0 ┆ 0.0 ┆ … ┆ 5.0 ┆ 4.0 ┆ 5.0 ┆ 3.0 │
  │ 4   ┆ 6.0 ┆ 3.0 ┆ 2.0 ┆ … ┆ 4.0 ┆ 4.0 ┆ 3.0 ┆ 5.0 │
  │ 5   ┆ 4.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 4.0 ┆ 2.0 ┆ 3.0 ┆ 4.0 │
  │ 6   ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 3.0 ┆ 2.0 ┆ 2.0 ┆ 4.0 │
  │ 7   ┆ 7.0 ┆ 3.0 ┆ 5.0 ┆ … ┆ 0.0 ┆ 1.0 ┆ 2.0 ┆ 6.0 │
  │ 8   ┆ 6.0 ┆ 4.0 ┆ 4.0 ┆ … ┆ 1.0 ┆ 0.0 ┆ 3.0 ┆ 5.0 │
  │ 9   ┆ 4.0 ┆ 2.0 ┆ 5.0 ┆ … ┆ 2.0 ┆ 3.0 ┆ 0.0 ┆ 5.0 │
  │ 10  ┆ 4.0 ┆ 5.0 ┆ 3.0 ┆ … ┆ 6.0 ┆ 5.0 ┆ 5.0 ┆ 0.0 │
  └─────┴─────┴─────┴─────┴───┴─────┴─────┴─────┴─────┘
# ---
# name: TestComputeMatrix.test_matrix_values_snapshot[timestep-state-l2entity]
  shape: (10, 11)
  ┌─────┬────────┬────────┬────────┬───┬────────┬────────┬────────┬────────┐
  │ id  ┆ 1      ┆ 2      ┆ 3      ┆ … ┆ 7      ┆ 8      ┆ 9      ┆ 10     │
  │ --- ┆ ---    ┆ ---    ┆ ---    ┆   ┆ ---    ┆ ---    ┆ ---    ┆ ---    │
  │ i64 ┆ f32    ┆ f32    ┆ f32    ┆   ┆ f32    ┆ f32    ┆ f32    ┆ f32    │
  ╞═════╪════════╪════════╪════════╪═══╪════════╪════════╪════════╪════════╡
  │ 1   ┆ 0.0    ┆ 3.3379 ┆ 5.4673 ┆ … ┆ 5.7222 ┆ 4.6029 ┆ 5.6433 ┆ 3.3426 │
  │ 2   ┆ 3.3379 ┆ 0.0    ┆ 7.7296 ┆ … ┆ 6.5663 ┆ 2.8926 ┆ 2.7894 ┆ 0.8849 │
  │ 3   ┆ 5.4673 ┆ 7.7296 ┆ 0.0    ┆ … ┆ 0.9684 ┆ 5.8233 ┆ 4.7828 ┆ 9.3586 │
  │ 4   ┆ 5.095  ┆ 6.1307 ┆ 0.1881 ┆ … ┆ 0.8605 ┆ 4.2351 ┆ 4.4338 ┆ 5.9605 │
  │ 5   ┆ 4.4403 ┆ 3.2314 ┆ 6.7407 ┆ … ┆ 4.6308 ┆ 3.3127 ┆ 3.3844 ┆ 3.409  │
  │ 6   ┆ 8.3159 ┆ 2.5356 ┆ 7.858  ┆ … ┆ 4.2593 ┆ 2.625  ┆ 2.9574 ┆ 2.2467 │
  │ 7   ┆ 5.7222 ┆ 6.5663 ┆ 0.9684 ┆ … ┆ 0.0    ┆ 3.6277 ┆ 3.3777 ┆ 6.7245 │
  │ 8   ┆ 4.6029 ┆ 2.8926 ┆ 5.8233 ┆ … ┆ 3.6277 ┆ 0.0    ┆ 3.1838 ┆ 2.5596 │
  │ 9   ┆ 5.6433 ┆ 2.7894 ┆ 4.7828 ┆ … ┆ 3.3777 ┆ 3.1838 ┆ 0.0    ┆ 2.6234 │
  │ 10  ┆ 3.3426 ┆ 0.8849 ┆ 9.3586 ┆ … ┆ 6.7245 ┆ 2.5596 ┆ 2.6234 ┆ 0.0    │
  └─────┴────────┴────────┴────────┴───┴────────┴────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[event-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0    ┆ 3.9754 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 3.9754 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[interval-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0    ┆ 3.9754 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 3.9754 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-hamming]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬───────┬───────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1 ┆ seq_2 │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---   ┆ ---   │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32   ┆ f32   │
  ╞═════════╪═════════╪═════════╪═════════╪═══════╪═══════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN   ┆ NaN   │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0   ┆ 1.0   │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 1.0   ┆ 0.0   │
  └─────────┴─────────┴─────────┴─────────┴───────┴───────┘
# ---
# name: TestComputeMatrix.test_mixed_matrix_snapshot[state-l2entity]
  shape: (5, 6)
  ┌─────────┬─────────┬─────────┬─────────┬────────┬────────┐
  │ id      ┆ empty_1 ┆ empty_2 ┆ empty_3 ┆ seq_1  ┆ seq_2  │
  │ ---     ┆ ---     ┆ ---     ┆ ---     ┆ ---    ┆ ---    │
  │ str     ┆ f32     ┆ f32     ┆ f32     ┆ f32    ┆ f32    │
  ╞═════════╪═════════╪═════════╪═════════╪════════╪════════╡
  │ empty_1 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_2 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ empty_3 ┆ NaN     ┆ NaN     ┆ NaN     ┆ NaN    ┆ NaN    │
  │ seq_1   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 0.0    ┆ 3.9754 │
  │ seq_2   ┆ NaN     ┆ NaN     ┆ NaN     ┆ 3.9754 ┆ 0.0    │
  └─────────┴─────────┴─────────┴─────────┴────────┴────────┘
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-hamming]
  5.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-event-l2entity]
  5.2123
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-hamming]
  5.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-interval-l2entity]
  5.2123
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-hamming]
  5.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[datetime-state-l2entity]
  5.2123
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-event-l2entity]
  3.3379
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-interval-l2entity]
  3.3379
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-hamming]
  6.0
# ---
# name: TestSinglePair.test_pair_sequence_snapshot[timestep-state-l2entity]
  3.3379
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-event-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-interval-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[datetime-state-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-event-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-interval-l2entity]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-hamming]
  0.0
# ---
# name: TestSinglePair.test_same_sequence_snapshot[timestep-state-l2entity]
  0.0
# ---
